--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/JasonShin/fp/issues"
   },
-  "homepage": "https://github.com/JasonShin/fp#readme"
+  "homepage": "https://github.com/JasonShin/fp#readme",
+  "dependencies": {
+    "data.either": "^1.5.0",
+    "data.task": "^3.1.1",
+    "fantasy-identities": "0.0.1",
+    "request": "^2.81.0"
+  }
 }
