--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "data.either": "^1.5.0",
     "data.task": "^3.1.1",
     "fantasy-identities": "0.0.1",
+    "fluture": "^6.1.0",
     "ramda": "^0.23.0",
     "request": "^2.81.0"
   }
