--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "data.task": "^3.1.1",
     "fantasy-identities": "0.0.1",
     "fluture": "^6.1.0",
+    "node-fetch": "^1.6.3",
     "ramda": "^0.23.0",
+    "ramda-fantasy": "^0.8.0",
     "request": "^2.81.0"
   }
 }
